@@ -1,5 +1,6 @@
 GridClassKey dev
 =================================================
+- [#82][#92] Give limit option for number of children to revert grid to tree.
 - [#79] Compatibility adjustment for action's value on 2.3.0+
 
 GridClassKey 1.0.0-pl (April 21, 2014)
